@@ -3,10 +3,10 @@ abstract: 'Base class for pod_example script.'
 author:
   - 'Michal Josef Spacek <skim@cpan.org>'
 build_requires:
+  Capture::Tiny: 0
   English: 0
   ExtUtils::MakeMaker: 6.59
   File::Object: 0.05
-  IO::CaptureOutput: 0
   Readonly: 0
   Test::More: 0
   Test::NoWarnings: 0
