@@ -30,9 +30,9 @@ requires 'Readonly' => 0;
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/App-Pod-Example/issues';
 resources 'homepage' => 'https://github.com/michal-josef-spacek/App-Pod-Example';
 resources 'repository' => 'git://github.com/michal-josef-spacek/App-Pod-Example';
+test_requires 'Capture::Tiny' => 0;
 test_requires 'English' => 0;
 test_requires 'File::Object' => 0.05;
-test_requires 'IO::CaptureOutput' => 0;
 test_requires 'Readonly' => 0;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
